Preserve overloaded static imports during semantic rename